work with XStream

--- a/bali-android/app/build.gradle
+++ b/bali-android/app/build.gradle
@@ -29,4 +29,5 @@ dependencies {
     compile ('com.thoughtworks.xstream:xstream:1.4.7') {
         exclude group: 'xmlpull', module: 'xmlpull'
     }
+    compile 'jp.wasabeef:glide-transformations:2.0.2'
 }
