--- a/bali-android/local.properties
+++ b/bali-android/local.properties
@@ -7,5 +7,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Mon Nov 13 13:40:46 PST 2017
-sdk.dir=C\:\\Users\\zaur_\\AppData\\Local\\Android\\Sdk
+#Tue Nov 21 13:49:14 MSK 2017
+sdk.dir=/Users/zaur/Library/Android/sdk
