--- a/bali-android/app/build.gradle
+++ b/bali-android/app/build.gradle
@@ -31,4 +31,5 @@ dependencies {
     }
     compile 'jp.wasabeef:glide-transformations:2.0.2'
     compile 'com.squareup.picasso:picasso:2.5.2'
+    compile 'com.squareup.retrofit2:retrofit:2.3.0'
 }
