--- a/bali-android/app/build.gradle
+++ b/bali-android/app/build.gradle
@@ -32,4 +32,6 @@ dependencies {
     compile 'jp.wasabeef:glide-transformations:2.0.2'
     compile 'com.squareup.picasso:picasso:2.5.2'
     compile 'com.squareup.retrofit2:retrofit:2.3.0'
+    compile 'com.squareup.retrofit2:converter-simplexml:2.3.0'
+    implementation 'com.android.support:cardview-v7:26.1.0'
 }
