--- a/bali-android/app/build.gradle
+++ b/bali-android/app/build.gradle
@@ -43,4 +43,6 @@ dependencies {
         exclude module: 'xpp3'
     }
     compile 'com.squareup.retrofit2:converter-scalars:2.3.0'
+    compile 'com.google.code.gson:gson:2.8.0'
+    compile 'com.squareup.retrofit2:converter-gson:2.3.0'
 }
