--- a/bali-android/app/src/main/AndroidManifest.xml
+++ b/bali-android/app/src/main/AndroidManifest.xml
@@ -22,7 +22,7 @@
             </intent-filter>
         </activity>
         <activity android:name=".activities.PostsActivity" />
-        <activity android:name=".activities.WebActivity"></activity>
+        <activity android:name=".activities.WebActivity" />
     </application>
 
 </manifest>
