--- a/bali-android/local.properties
+++ b/bali-android/local.properties
@@ -7,5 +7,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Mon Nov 27 14:30:13 MSK 2017
-sdk.dir=/Users/zaur/Library/Android/sdk
+#Thu Nov 30 14:52:58 MSK 2017
+sdk.dir=C\:\\Users\\zaur_\\AppData\\Local\\Android\\Sdk
