--- a/bali-android/app/src/main/AndroidManifest.xml
+++ b/bali-android/app/src/main/AndroidManifest.xml
@@ -14,7 +14,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".activities.MainActivity">
+        <activity
+            android:name=".activities.MainActivity"
+            android:windowSoftInputMode="stateHidden|adjustPan">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -23,7 +25,6 @@
         </activity>
         <activity android:name=".activities.PostsActivity" />
         <activity android:name=".activities.WebActivity" />
-        <activity android:name=".activities.CourseActivity"></activity>
     </application>
 
 </manifest>
