add weather view

--- a/bali-android/local.properties
+++ b/bali-android/local.properties
@@ -7,5 +7,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Fri Dec 01 13:59:49 MSK 2017
-sdk.dir=/Users/zaur/Library/Android/sdk
+#Tue Dec 05 10:02:34 MSK 2017
+sdk.dir=C\:\\Users\\zaur_\\AppData\\Local\\Android\\Sdk
