--- a/bali-android/app/src/main/AndroidManifest.xml
+++ b/bali-android/app/src/main/AndroidManifest.xml
@@ -16,6 +16,7 @@
         android:theme="@style/AppTheme">
         <activity
             android:name=".activities.MainActivity"
+            android:screenOrientation="portrait"
             android:windowSoftInputMode="stateHidden|adjustPan">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -23,12 +24,17 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".activities.PostsActivity" />
-        <activity android:name=".activities.WebActivity" />
+        <activity
+            android:name=".activities.PostsActivity"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".activities.WebActivity"
+            android:screenOrientation="portrait" />
         <activity
             android:name=".activities.ScrollingActivity"
             android:label="@string/title_activity_scrolling"
-            android:theme="@style/AppTheme.NoActionBar"></activity>
+            android:screenOrientation="portrait"
+            android:theme="@style/AppTheme.NoActionBar" />
     </application>
 
 </manifest>
