--- a/bali-android/app/src/main/AndroidManifest.xml
+++ b/bali-android/app/src/main/AndroidManifest.xml
@@ -28,6 +28,7 @@
             android:screenOrientation="portrait" />
         <activity android:name=".activities.SplashScreenActivity"
             android:theme="@style/SplashTheme"
+            android:screenOrientation="portrait"
             ><intent-filter>
             <action android:name="android.intent.action.MAIN" />
 
